--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     def retrofit_version = '2.9.0'
     def httplogging_version = '4.9.0'
     def pagingVersion = '3.0.0-alpha03'
+    def picassoVersion = "2.71828"
 
     //Android Navigation
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
@@ -75,6 +76,7 @@ dependencies {
     //glide to cache the images
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version:"
+    implementation "com.squareup.picasso:picasso:$picassoVersion"
 
     // Coroutines
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:${coroutine_version}")
