--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.utkarsh.spokesly">
+    package="com.utkarsh.myGate">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        tools:ignore="ScopedStorage" />
-    <uses-permission android:name="android.permission.CAMERA" />
-
-    <uses-feature
-        android:name="android.hardware.camera.front"
-        android:required="true" />
 
     <application
-        android:name=".cognito.SpokeslyApplication"
+        android:name="com.utkarsh.myGate.cognito.MyGateApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -25,18 +16,8 @@
         android:theme="@style/splashTheme"
         android:usesCleartextTraffic="true">
 
-        <!--<provider
-            android:name="androidx.core.content.FileProvider"
-            android:authorities="com.utkarsh.spokesly.data."
-            android:exported="false"
-            android:grantUriPermissions="true"
-            tools:replace="android:authorities">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths" />
-        </provider>-->
         <activity
-            android:name=".ui.BaseActivity"
+            android:name="com.utkarsh.myGate.ui.activities.BaseActivity"
             android:exported="true"
             android:launchMode="singleTask"
             android:screenOrientation="locked"
@@ -48,7 +29,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.MainActivity"
+            android:name="com.utkarsh.myGate.ui.activities.MainActivity"
             android:exported="true"
             android:launchMode="singleTask"
             android:screenOrientation="locked"></activity>
